smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/2.1/resource-properties.smithy
$version: "2.1"

namespace smithy.example

resource Widget {
    identifiers: {
        widgetId: String
    }
    properties: {
        name: String
    }
    read: GetWidget
}

@readonly
operation GetWidget {
    input := {
        @required
        widgetId: String
    }
    output := {
        name: String
    }
}
