smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/inline-io/walrus-operator-in-node.smithy
// The `:=` syntax may only be used when defining inline operation input and output shapes.
$version: "2.0"

metadata foo = {
    inlined := {}
}

namespace smithy.example
